--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "grunt-prompt": "^1.3.3",
     "grunt-sharepoint-list": "^1.0.4",
     "grunt-webapppool": "^0.0.2",
+    "grunt-eslint": "^21.0.0",
     "lodash": "^4.17.11"
   },
   "keywords": [
