--- a/package.json
+++ b/package.json
@@ -4,8 +4,7 @@
   "version": "0.0.7",
   "homepage": "",
   "author": {
-    "name": "Robin Herbots",
-    "email": "robin.herbots@reynaers.com"
+    "name": "Robin Herbots"
   },
   "repository": {
     "type": "git",
