--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://gitlab.com/reynaers/webteam/framework/grunt-cideploy.git"
+    "url": "https://github.com/RobinHerbots/grunt_cideploy"
   },
   "bugs": {
     "url": ""
