--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "grunt-cideploy",
   "description": "Reynaers Deployment Task",
-  "version": "0.0.8",
+  "version": "0.0.9",
   "homepage": "",
   "author": {
     "name": "Robin Herbots"
@@ -13,12 +13,7 @@
   "bugs": {
     "url": ""
   },
-  "licenses": [
-    {
-      "type": "MIT",
-      "url": "/blob/master/LICENSE-MIT"
-    }
-  ],
+  "license": "MIT",
   "engines": {
     "node": ">= 0.8.0"
   },
@@ -26,11 +21,12 @@
     "test": "grunt test"
   },
   "devDependencies": {
+    "eslint": "^5.16.0",
     "grunt": "^1.0.4",
+    "grunt-available-tasks": "git://github.com/RobinHerbots/grunt-available-tasks.git",
     "grunt-bump": "^0.8.0",
-    "grunt-contrib-jshint": "^2.1.0",
-    "load-grunt-tasks": "^5.1.0",
-    "grunt-available-tasks": "git://github.com/RobinHerbots/grunt-available-tasks.git"
+    "grunt-eslint": "^21.1.0",
+    "load-grunt-tasks": "^5.1.0"
   },
   "dependencies": {
     "grunt-cli": "^1.3.2",
@@ -41,7 +37,6 @@
     "grunt-prompt": "^1.3.3",
     "grunt-sharepoint-list": "^1.0.4",
     "grunt-webapppool": "^0.0.3",
-    "grunt-eslint": "^22.0.0",
     "lodash": "^4.17.15"
   },
   "keywords": [
